# ember

./: .gitmodules  pyproject.toml  readme.md
ember/: ember.py  fitsed.py  postprocess.py  submit.py  summarize.py
ember.egg-info/: SOURCES.txt  entry_points.txt
ember/ages/: ageinterp.py  chainhandler.py  preprocess.py
ember/ember.egg-info/: SOURCES.txt  entry_points.txt
ember/mcmc/: fitting.py  likelihoods.py  util.py
ember/mcmc/GaiaDR3XPspectracorrectionV1/: __init__.py
src/: ember.py  fitsed.py  postprocess.py  submit.py  summarize.py
src/ages/: chainhandler.py
src/ember.egg-info/: PKG-INFO  requires.txt
src/mcmc/: photometry.py  xpspec.py
