[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ember"
version = "0.1.0"
requires-python = ">=3.10"
description = "EMBER : Estimating Mass and Bolometric properties of Evolved Remnants"
readme = "README.md"
dependencies = [
  "typer[all]", "astropy", "astroquery", "lmfit", "tqdm", "corner",
  "pyvo", "gaiaxpy",
  "interpolator @ git+https://github.com/stefanarseneau/wd_interpolator.git"
]

[project.scripts]
# If `app` is in ember/__init__.py:        ember = "ember:app"
# If `app` is in ember/cli.py:             ember = "ember.cli:app"
ember = "ember:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ember*"]     # include subpackages like ember.commands

